# Tic-Tac-Toe_Bot_Project

./: Dockerfile  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
TicTacToeBot/: asgi.py  settings.py  urls.py  wsgi.py
bot/: admin.py  config.py  main.py  models.py  urls.py  utils.py  views.py
bot/migrations/: 0001_initial.py
